fix build/release problems